--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.3",
+    "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.17.7",
     "axios": "^1.6.5",
     "react": "^18.2.0",
