--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.17.7",
+    "antd": "^5.13.2",
     "axios": "^1.6.5",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
