--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
     "@mui/material": "^5.15.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.17.7",
