--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.17.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.13.2",
     "axios": "^1.6.5",
     "lucide-react": "^0.309.0",
