--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@mantine/charts": "^7.5.1",
+    "@mantine/core": "^7.5.1",
+    "@mantine/form": "^7.5.1",
+    "@mantine/hooks": "^7.5.1",
+    "@mantine/modals": "^7.5.1",
+    "@mantine/notifications": "^7.5.1",
     "@material-tailwind/react": "^2.1.8",
     "@mui/material": "^5.15.3",
     "@tailwindcss/forms": "^0.5.7",
@@ -31,7 +37,8 @@
     "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.21.1",
-    "react-tag-input": "^6.8.1"
+    "react-tag-input": "^6.8.1",
+    "recharts": "^2.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
