--- a/package.json
+++ b/package.json
@@ -14,19 +14,17 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@mantine/charts": "^7.5.1",
-    "@mantine/core": "^7.5.1",
-    "@mantine/form": "^7.5.1",
-    "@mantine/hooks": "^7.5.1",
-    "@mantine/modals": "^7.5.1",
-    "@mantine/notifications": "^7.5.1",
     "@material-tailwind/react": "^2.1.8",
     "@mui/material": "^5.15.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.17.7",
     "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.13.2",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,7 +36,9 @@
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.21.1",
     "react-tag-input": "^6.8.1",
-    "recharts": "^2.11.0"
+    "recharts": "^2.11.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
