--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.17.7",
+    "@tanstack/react-query-devtools": "^5.20.2",
     "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.13.2",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0-rc22",
+    "flowbite-react": "^0.7.2",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
