--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@material-tailwind/react": "^2.1.8",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.17.7",
