--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.21.1",
+    "react-select": "^5.8.0",
     "react-tag-input": "^6.8.1",
     "recharts": "^2.11.0",
     "tailwind-merge": "^2.2.1",
