--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "flowbite-react": "^0.7.2",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
