--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@mantine/charts": "^7.5.3",
+    "@mantine/core": "^7.5.3",
+    "@mantine/hooks": "^7.5.3",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.3",
     "@radix-ui/react-icons": "^1.3.0",
@@ -43,7 +46,7 @@
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
     "react-tag-input": "^6.8.1",
-    "recharts": "^2.11.0",
+    "recharts": "^2.12.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
